--- a/src/index.scss
+++ b/src/index.scss
@@ -239,12 +239,11 @@ body {
 
 .send form button {
   background: #0633ff;
-  color: #FFF;
+  color: #fff;
   border: 1px solid #838383;
   border-radius: 0 4px 4px 0;
   padding: 0 8px;
 }
-
 
 .message {
   position: absolute;
@@ -254,4 +253,11 @@ body {
   bottom: 36px;
   overflow: scroll;
   padding: 6px 8px;
+}
+
+.online {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  z-index: 100;
 }
